@@ -11,7 +11,7 @@ BEGIN {
 
 BEGIN {
     use FindBin;
-    use lib qq{$FindBin::Bin/testlib};
+    use lib qq{$FindBin::Bin/lib};
     use Zucchini::TestConfig;
 }
 
