@@ -6,7 +6,7 @@ use Test::More;
 
 BEGIN {
     use FindBin;
-    use lib qq{$FindBin::Bin/testlib};
+    use lib qq{$FindBin::Bin/lib};
     use Zucchini::TestConfig;
 }
 
