@@ -10,7 +10,7 @@ use File::Temp qw(tempdir);
 
 BEGIN {
     use FindBin;
-    use lib qq{$FindBin::Bin/testlib};
+    use lib qq{$FindBin::Bin/lib};
     use Zucchini::Test;
     use Zucchini::TestConfig;
 }
